--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
     "uuid": "^11.0.5"
+  },
+  "devDependencies": {
+    "prettier": "3.5.0"
   }
 }
