--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "joi": "^17.13.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
+    "uid": "^2.0.2",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
