--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "goit-node-rest-api",
-  "version": "1.0.0",
-  "type": "module",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node ./app.js",
-    "dev": "nodemon ./app.js"
-  },
-  "author": "Sergey Shevchenko <“sergiishevchenko017@gmail.com”>",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "joi": "^17.13.3",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.9",
-    "uid": "^2.0.2",
-    "uuid": "^11.0.5"
-  },
-  "devDependencies": {
-    "prettier": "3.5.0"
-  }
+    "name": "goit-node-rest-api",
+    "version": "1.0.0",
+    "type": "module",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node ./app.js",
+        "dev": "nodemon ./app.js",
+        "format": "prettier --write ."
+    },
+    "author": "Sergey Shevchenko <“sergiishevchenko017@gmail.com”>",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.21.2",
+        "joi": "^17.13.3",
+        "morgan": "^1.10.0",
+        "nodemon": "^3.1.9",
+        "uid": "^2.0.2",
+        "uuid": "^11.0.5"
+    },
+    "devDependencies": {
+        "prettier": "3.5.0"
+    }
 }
