--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "author": "Sergey Shevchenko <“sergiishevchenko017@gmail.com”>",
     "dependencies": {
         "@sequelize/postgres": "^7.0.0-alpha.45",
+        "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "joi": "^17.13.3",
+        "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
         "nodemon": "^3.1.9",
         "sequelize": "^6.37.5",
