--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "gravatar": "^1.8.2",
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "nodemon": "^3.1.9",
         "sequelize": "^6.37.5",
         "uid": "^2.0.2",
