--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.10.0",
         "nodemon": "^3.1.9",
         "sequelize": "^6.37.5",
         "uid": "^2.0.2",
-        "uuid": "^11.0.5"
+        "uuid": "^11.1.0"
     },
     "devDependencies": {
         "prettier": "3.5.0"
