--- a/env.example
+++ b/env.example
@@ -5,6 +5,6 @@ DATABASE_HOST=127.0.0.1
 DATABASE_NAME=nodejs
 DATABASE_PORT=3000
 DATABASE_DIALECT=postgres
-EMAIL=test@test.com
+EMAIL=example@example.com
 UKR_EMAIL_KEY=
 UKR_EMAIL_HOST=
