--- a/env.example
+++ b/env.example
@@ -6,5 +6,5 @@ DATABASE_NAME=nodejs
 DATABASE_PORT=3000
 DATABASE_DIALECT=postgres
 EMAIL=example@example.com
-UKR_EMAIL_KEY=
-UKR_EMAIL_HOST=
+EMAIL_PASSWORD=smth
+EMAIL_HOST=smtp.ukr.net
